# LSets

./: CHANGELOG.md  README.md  fuzzySets.cabal
src/: Fuzzy.hs  FuzzySet.hs  Lattices.hs  Main.hs
src/Fuzzy/: Control.hs  Relations.hs  Sets.hs  Tutorial.hs
src/Fuzzy/Control/: Defuzzification.hs  Defuzzyfication.hs  Fuzzification.hs  InferenceRules.hs
src/Fuzzy/Relations/: LRelation.hs  MembershipFunctions.hs
src/Fuzzy/Sets/: Cardinality.hs  FuzzyCardinality.hs  LSet.hs  MembershipFunctions.hs  Properties.hs
src/Lattices/: ResiduatedLattice.hs  UnitInterval.hs  UnitIntervalStructures.hs
src/Lattices/UnitIntervalStructures/: Godel.hs  Lukasiewicz.hs  Product.hs
test/: Tests.hs
test/Fuzzy/Control/: DefuzzificationTest.hs
test/Fuzzy/Relations/: LRelationTest.hs
test/Fuzzy/Sets/: CardinalityTest.hs  FuzzyCardinalityTest.hs
