cabal-version:      2.4
name:               fuzzySets
version:            1.1.0
category:           Math
license:            BSD-3-Clause
author:             Lukas Balog <lukasbalog66@gmail.com>
maintainer:         Lukas Balog <lukasbalog66@gmail.com>
homepage:           https://github.com/luckyluke66/L-Sets

synopsis:
    A Haskell library for working with fuzzy sets and fuzzy relations.

description:
    In classical set theory, an element either belongs to a set or it does not.
    Fuzzy sets generalize this idea by allowing graded membership.

    This package provides tools for constructing and manipulating fuzzy sets
    and fuzzy relations.
    If you are new to the library, the "Fuzzy.Tutorial" module is the best
    place to start before diving into the reference documentation.

extra-doc-files: CHANGELOG.md

source-repository head
    type:           git
    location:       https://github.com/luckyluke66/L-Sets 

library
    default-language: Haskell2010
    hs-source-dirs:   src

    exposed-modules:
        Fuzzy
        Fuzzy.Control
        Fuzzy.Relations
        Fuzzy.Sets
        Fuzzy.Tutorial
        FuzzySet
        Fuzzy.Sets.LSet
        Fuzzy.Sets.MembershipFunctions
        Fuzzy.Sets.Cardinality
        Fuzzy.Sets.FuzzyCardinality
        Fuzzy.Sets.Properties
        Fuzzy.Control.Defuzzification
        Fuzzy.Control.Fuzzification
        Fuzzy.Control.InferenceRules
        Fuzzy.Relations.LRelation
        Fuzzy.Relations.MembershipFunctions
        Fuzzy.Relations.RelationComposition
        Fuzzy.Relations.Properties
        Lattices.ResiduatedLattice
        Lattices
        Lattices.UnitInterval
        Lattices.UnitIntervalStructures
        Lattices.UnitIntervalStructures.Godel
        Lattices.UnitIntervalStructures.Lukasiewicz
        Lattices.UnitIntervalStructures.Product
    
    other-modules:
        Utils.Utils
    
    build-depends:    
        base >=4.14 && < 4.21,

    default-extensions:
        InstanceSigs
        MultiParamTypeClasses
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
    


test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:
        base,
        HUnit,
        tasty,
        tasty-hunit,
        fuzzySets,
    
    other-modules:
        UnitIntervalStructuresTest
        Utils.Utils
        Fuzzy.Sets.LSetTest
        Fuzzy.Sets.FuzzyCardinalityTest
        Fuzzy.Sets.MembershipFunctionsTest
        Fuzzy.Sets.PropertiesTest
        Fuzzy.Relations.LRelationTest
        Fuzzy.Relations.PropertiesTest
        Fuzzy.Control.DefuzzificationTest
